// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Avatar /> > Autoplay > renders a animated avatar 1`] = `
<div
  className="account__avatar"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "height": "100px",
      "width": "100px",
    }
  }
>
  <img
    alt=""
    src="/animated/alice.gif"
  />
</div>
`;

exports[`<Avatar /> > Still > renders a still avatar 1`] = `
<div
  className="account__avatar"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    {
      "height": "100px",
      "width": "100px",
    }
  }
>
  <img
    alt=""
    src="/static/alice.jpg"
  />
</div>
`;
